# scrambled-emerald

./: .clang-format  .gitignore  Makefile  README.md  TODO.md  ld_script_modern.ld
data/: battle_scripts_1.s  event_scripts.s
include/: battle.h  battle_ai_main.h  battle_ai_util.h  battle_anim.h  battle_main.h  battle_script_commands.h  battle_scripts.h  battle_setup.h  battle_util.h  bw_summary_screen.h  data.h  global.berry.h  global.h  graphics.h  item_use.h  move_relearner.h  pokemon.h  scrambled.h
rust/: Cargo.toml  build.rs
src/: battle_ai_main.c  battle_ai_switch_items.c  battle_ai_util.c  battle_anim_status_effects.c  battle_controller_player.c  battle_controllers.c  battle_dynamax.c  battle_interface.c  battle_main.c  battle_message.c  battle_script_commands.c  battle_setup.c  battle_terastal.c  battle_tower.c  battle_util.c  bw_summary_screen.c  data.c  daycare.c  debug.c  egg_hatch.c  event_object_movement.c  evolution_scene.c  fldeff_cut.c  intro.c  item_use.c  main_menu.c  menu.c  move_relearner.c  new_game.c  option_menu.c  palette.c  party_menu.c  player_pc.c  pokemon.c  pokemon_storage_system.c  pokemon_summary_screen.c  scrambled.c  scrcmd.c  shop.c  sound.c  (+7 more)
tools/: gen_compile_commands.py
tools/importers/: Cargo.toml  importer.rs  localcpp.py  moves.rs  species.rs  trainers.rs  tree_utils.rs
tools/importers/resources/: move_descs.json  move_names.json  personal_array.fbs  text.data.decoder.py  trainer_list.json  trdata_array.fbs  vanilla_move_names.json  waza_array.fbs  waza_array.json  waza_array.previous.json  waza_array_vanilla.json
(+181 files in other folders)
